<resources>
    <string name="app_name">MAD-Final-Lab</string>
    <string name="courseApp">The CourseApp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="registerForm">Register Form</string>
    <string name="send">Send</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>


</resources>
